# adguardctl

./: .gitignore  CLAUDE.md  README.md  compose.yml  justfile  pyproject.toml  pyrefly-baseline.json
.github/workflows/: ci.yml
docker/adguardhome/: AdGuardHome.yaml
docker/unbound/: Dockerfile  unbound.conf
docs/: design.md
src/adguardctl/: __init__.py  __main__.py  api.py  client.py  config.py  exceptions.py  models.py  render.py
src/adguardctl/cli/: __init__.py  _common.py  access.py  app.py  clients.py  dns.py  encryption.py  export.py  filters.py  querylog.py  rewrites.py  rules.py  settings.py  stats.py
tests/: conftest.py
tests/fixtures/: access_list.json  clients.json  dns_info.json  filtering_status.json  querylog.json  safesearch_status.json  stats.json  status.json  tls_status.json
tests/integration/: test_live.py
tests/unit/: test_api.py  test_cli.py  test_cli_commands.py  test_client.py  test_config.py  test_export.py  test_render.py
